--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Servicios</a>
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="#">Impresión 3D</a></li>
-      <li><a class="dropdown-item" href="#">Esculpido digital</a></li>
+      <li><a class="dropdown-item" href="#">Esculpido digital profesional</a></li>
       <li><a class="dropdown-item" href="#">Diseño CAD</a></li>
     </ul>
       </li>
