--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	  </nav>
 	</div> 
 	
-
+<!--Agregue una linea de ejemplo-->
   <div id="carouselExampleControls" class="carousel slide col-md-6 col-sm-12 mx-auto mt-3" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
