--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	</div> 
 	
 <!--Agregue una linea de ejemplo-->
+<!--Aqui va otro cambio-->
   <div id="carouselExampleControls" class="carousel slide col-md-6 col-sm-12 mx-auto mt-3" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
