--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</div> 
 	
 <!--por favor,again!-->
-<!--Aqui va otro cambio-->
+<!--Aqui va otro cambio por si acaso-->
   <div id="carouselExampleControls" class="carousel slide col-md-6 col-sm-12 mx-auto mt-3" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
