--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     sizes="32x32"
     href="./static/slide1.jpg"
   />
-    <title>TU MONO! Diseño Digital</title>
+    <title>TU MONO! Diseño Digital PRUEBA NGROK</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
